syntax = "proto2";

package test_any;

message MessageOne {
    optional int32 i = 1;
}

message MessageTwo {

}
